# riscv_vhdl

./: .gitignore  .gitmodules  LICENSE  README.md  _e_1_2_projects_2_git_projects_2riscv_vhdl_2rocket_soc_2work_2tb_2riscv_soc_tb_8vhd-example.html  _sys_p_l_l__inferred_8vhd.html  _sys_p_l_l__tech_8vhd.html  accum_8vhd.html  allmem_8vhd.html  annotated.html  api__core_8h.html  api__core_8h_source.html  api__types_8h.html  api__types_8h_source.html  api__utils_8h.html  api__utils_8h_source.html  attribute_8cpp.html  attribute_8h.html  attribute_8h_source.html  auto_compare_page.html  autobuffer_8cpp.html  autobuffer_8h.html  autobuffer_8h_source.html  axi2fse_8vhd.html  axi__rfctrl_8vhd.html  axibridge_8vhd.html  axictrl_8vhd.html  bridge__arb_8vhd.html  bufgmux__fpga_8vhd.html  bufgmux__micron180_8vhd.html  bufgmux__tech_8vhd.html  carr__nco_8vhd.html  class__grethpkg-members.html  class__grethpkg.html  class__types__amba4-members.html  class__types__amba4.html  class__types__common-members.html  class__types__common.html  class__types__fse__v2-members.html  class__types__fse__v2.html  (+776 more)
.ci/: build-project.sh  ci-ccache-maint.sh  install-vcpkg.sh
.github/workflows/: build.yml  ci.yml
debugger/: .gitignore  README.md
debugger/cmake/: CMakeLists.txt  post_build_event.bat  post_build_event.sh
debugger/cmake/cpu_arm_plugin/: CMakeLists.txt  exportmap.def
debugger/cmake/cpu_fnc_plugin/: CMakeLists.txt  exportmap.def
debugger/cmake/cpu_sysc_plugin/: CMakeLists.txt
debugger/cmake/gui_plugin/: CMakeLists.txt  post_build_event.bat  post_build_event.sh
debugger/cmake/libdbg64g/: CMakeLists.txt  exportmap.def
debugger/cmake/simple_plugin/: CMakeLists.txt
debugger/cmake/socsim_plugin/: CMakeLists.txt
debugger/makefiles/: make_appdbg64g  make_cpu_arm_plugin  make_cpu_fnc_plugin  make_cpu_rtl_plugin  make_cpu_sysc_plugin  make_gui_plugin  make_libdbg64g  make_simple_plugin  make_socsim_plugin  make_testapp  makefile  util.mak
debugger/msvc13/: riscvdebugger.sln
debugger/msvc17_x64/: riscvdebugger.sln
debugger/scripts/: autotest1.py  demo_arm.py
debugger/targets/: common_arm.json  common_riscv.json  common_soc.json  default.h.json  dpi_gui.json  dualcore_sim_gui.json  fpga_gui.json  fpga_gui_uartdbg.json  func_arm_gui.json  func_fu740.json  func_river_x1_gui.json  functional_arm_gui.json  functional_dpi_gui.json  functional_sim_gui.json  stm32l4xx_gui.json  sysc_river_ena.json  sysc_river_gui.json  sysc_river_x1_gui.json
docs/: .gitignore  SoC with the Satellite Navigation based on single-core.pptx
docs/doxygen/: 02_arch_overview.doxy  03_memory.doxy  04_cpu.doxy  05_cpu.doxy  05_debug.doxy  06_interrupts.doxy  06_periph.doxy  06a_dsu.doxy  06d_irqctrl.doxy  06e_uart.doxy  06f_pnp.doxy  06g_spiflash.doxy  07_debugger.doxy  07_gpio.doxy  08_debugpy.doxy  08_uart.doxy  09_gptimers.doxy  55_rtl_verif.doxy  _top.doxy
examples/: .gitignore
examples/bbl-q/: .gitignore  bbl-q-noprintf.lst  bbl-q.lst  makefile.bat  map
examples/boot/: .gitignore
examples/bootarm/: .gitignore
examples/bootrom_tests/: .gitignore
examples/common/: axi_const.h  axi_maps.h  encoding.h  iface.h
examples/cpp_demo/: .gitignore
examples/dhrystone21/: .gitignore
examples/fasttask/: .gitignore
examples/helloworld/: .gitignore
examples/isrdemo/: .gitignore
examples/riscv-tests/: .gitignore
examples/zephyr/: v1.6.0-riscv64-exten.diff
files/: bootrom_tests.lst
libdpiwrapper/: .gitignore  README.md
libdpiwrapper/makefiles/: make_libdpiwrapper  make_libsv_stub  make_test  makefile  makefile.bat
libdpiwrapper/msvc2019_x64/: libdpiwrapper.sln
libdpiwrapper/pyclient/: autotest1.py
libdpiwrapper/src/: types.h  utils.h
openocd_gdb_cfg/: README.md  _run_openocd.bat  bitbang.cfg  bitbang_gdb.cfg  kc705_river_1core.cfg  kc705_river_smp.cfg
rocket_soc/: .gitignore
rocket_soc/ambalib/: axictrl.vhd  types_amba4.vhd
rocket_soc/commonlib/: types_common.vhd  types_util.vhd
rocket_soc/docs/: .gitignore  Doxyfile  maingroup.vhd  mainpage.vhd
rocket_soc/ethlib/: eth_axi_mst.vhd  greth_tx.vhd  grethaxi.vhd  grethc64.vhd
rocket_soc/fw_images/: bootimage.hex  fwimage.hex  gnssfw.hex  helloworld.hex
rocket_soc/gnsslib/: types_gnss.vhd
rocket_soc/ise/: rocket_chip.xpr  rocket_soc.xise  rocket_soc_kc705.ucf  rocket_soc_kc705.xdc
rocket_soc/misclib/: nasti_gpio.vhd  nasti_gptimers.vhd  nasti_irqctrl.vhd  nasti_pnp.vhd  nasti_uart.vhd  reset_glb.vhd
rocket_soc/riverlib/: river_amba.vhd  river_cfg.vhd  river_top.vhd  types_river.vhd
rocket_soc/rocketlib/: Top.GnssConfigNoFPU.v  behav_srams.v  rocket_l1only.vhd  rocket_l2cache.vhd  types_nasti.vhd  types_rocket.vhd  types_tile.vhd
rocket_soc/work/: config_common.vhd  config_msim.vhd  config_v6.vhd  riscv_soc.vhd  riscv_soc_gnss.vhd  rocket_soc.ucf  rocket_soc.vhd  rocket_soc_v6.ucf
rtl/: .gitignore
rtl/ambalib/: axictrl.vhd  axictrl_bus0.vhd  axislv.vhd  defslv.vhd  types_amba4.vhd  types_bus0.vhd
rtl/ethlib/: eth_axi_mst.vhd  greth_rx.vhd  grethaxi.vhd  types_eth.vhd
rtl/gnsslib/: types_gnss.vhd
rtl/misclib/: axi4_flashspi.vhd  axi4_gpio.vhd  axi4_gptimers.vhd  axi4_irqctrl.vhd  axi4_otp.vhd  axi4_pnp.vhd  axi4_rom.vhd  axi4_sram.vhd  axi4_uart.vhd  dcom_jtag.vhd  nasti_bootrom.vhd  nasti_gpio.vhd  nasti_gptimers.vhd  nasti_irqctrl.vhd  nasti_pnp.vhd  nasti_romimage.vhd  nasti_sram.vhd  nasti_uart.vhd  tap_jtag.vhd  tap_uart.vhd  types_misc.vhd
rtl/work/: asic_top.vhd  (+3 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+76 more)
zephyr/: .gitignore  Makefile  _howto_build  _howto_build_riscv  riscv64_master20160810.diff  v1.5.0-branch.diff  v1.6.0-riscv64-base.diff  v1.6.0-riscv64-gcc711.diff
(+2436 files in other folders)
